--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="container">
 		<div class="row text-center topmarg">
 				<p>
-				<h1>在线中文汉字转换拼音工具(带声调)</h1>
+				<h1>在线中文汉字转换拼音工具</h1>
 				</p>
 				<hr>
 		</div>
@@ -52,6 +52,9 @@
 					<a href="https://pb.999986.xyz/">在线排版工具</a>
 					<a href="https://pinyin.999986.xyz">汉字转换拼音</a>
 					<a href="https://jizan.999986.xyz">朋友圈集赞生成工具</a>
+					<a href="https://www.aies.cn/pinyin.htm" rel="nofollow">在线汉字转换拼音工具</a>
+					<a href="https://www.iamwawa.cn/pinyin.html" rel="nofollow">中文转拼音注音工具</a>
+					<a href="https://zhongwenzhuanpinyin.bmcx.com/" rel="nofollow">中文转拼音</a>
 			</p>
 		</div>
 </div>
